<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exemplo_shared_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/txt_label_nome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/txt_label_sexo" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:text="@string/txt_label_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMasculino"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/txt_label_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFeminino"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/txt_label_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextIdade" />

    <Button
        android:text="@string/txt_btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalvar" />

    <Button
        android:text="@string/txt_btn_ler_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLerDadosDb" />

    <TextView
        android:text="@string/txt_label_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatus" />
</LinearLayout>
