<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThreadActivity"
        android:orientation="vertical">

    <TextView
            android:id="@+id/textViewLabelThread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo_download" />

    <Button
            android:id="@+id/btnExibirImagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_exibir" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnProgresso"
            android:text="@string/txt_btn_progresso"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewLogo"/>
</LinearLayout>
