<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/btnService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_service" />

    <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btnBindService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_bind_service" />

    <TextView
            android:id="@+id/textBindService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    <Button
            android:id="@+id/btnAgendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_agendar" />
</LinearLayout>
